# NexaCore

./: Cargo.toml  README.md
docs/: CONTRIBUTING.md  NexaCore-whitepaper.md
examples/simple_payment/: index.html  payment.js  payment.rs
examples/voting/: index.html  voting.js  voting.rs
frontend/: index.html  package.json  vite.config.js  webpack.config.js
frontend/css/: nexacore.css
frontend/js/: nexacore.js
frontend/public/: index.html
frontend/src/: App.js  index.js  routes.js
frontend/src/components/: Chart.js  Dashboard.js  Footer.js  Form.js  Header.js  Modal.js  Notification.js  Sidebar.js  Transaction.js  Wallet.js
frontend/src/services/: api.js  authService.js  contractService.js  nodeService.js  walletService.js
frontend/src/styles/: dashboard.css  explorer.css  global.css  wallet.css
frontend/src/utils/: format.js  validate.js
src/: lib.rs  main.rs
src/ai/: debugger.rs  mod.rs  optimizer.rs
src/core/: block.rs  consensus.rs  mod.rs  shard.rs  state.rs  transaction.rs
src/network/: mod.rs  p2p.rs  rpc.rs
src/smartcontracts/: compiler.rs  mod.rs  vm.rs
src/wallets/: mod.rs
