[package]
name = "nexacore"
version = "0.1.0"
edition = "2021"
authors = ["NexaCore Team <info@nexacore.io>"]
description = "A high-performance blockchain with AI integration, sharding, and zk-SNARKs"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Network
libp2p = "0.52"
reqwest = { version = "0.11", features = ["json"] }
jsonrpc = "0.16"

# Storage
rocksdb = "0.21"

# Smart contracts
wasmi = "0.30"  # WebAssembly interpreter
wabt = "0.10"   # WebAssembly toolkit

# Cryptography and privacy
ark-ff = "0.4"  # Finite fields for zk-SNARKs
ark-ec = "0.4"  # Elliptic curves
ark-groth16 = "0.4"  # Groth16 proving system
ark-bn254 = "0.4"  # BN254 curve implementation

# AI integration
tch = "0.13"  # PyTorch C++ API bindings
tract-onnx = "0.20"  # ONNX runtime for Rust

# Config
config = "0.13"
toml = "0.7"

# CLI
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tempfile = "3.5"

[[bin]]
name = "nexacore"
path = "src/main.rs"

[[bin]]
name = "debugger"
path = "src/bin/debugger.rs"

[[bin]]
name = "explorer"
path = "src/bin/explorer.rs"

[lib]
name = "nexacore"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"